--- a/UK_Nuclear_Simulator/Makefile
+++ b/UK_Nuclear_Simulator/Makefile
@@ -4,13 +4,20 @@ LDFLAGS = -lssl -lcrypto -lpthread
 
 all: nuclearControl missileSilo submarine radar satellite
 
-nuclearControl: nuclearControl.c common.c globals.c common.h
-	$(CC) $(CFLAGS) -o $@ nuclearControl.c common.c globals.c $(LDFLAGS)
+nuclearControl: nuclearControl.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ nuclearControl.c common.c $(LDFLAGS)
 
-missileSilo: missileSilo.c common.c globals.c common.h
-	$(CC) $(CFLAGS) -o $@ missileSilo.c common.c globals.c $(LDFLAGS)
+missileSilo: missileSilo.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ missileSilo.c common.c $(LDFLAGS)
 
-# Similar rules for other components...
+submarine: submarine.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ submarine.c common.c $(LDFLAGS)
+
+radar: radar.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ radar.c common.c $(LDFLAGS)
+
+satellite: satellite.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ satellite.c common.c $(LDFLAGS)
 
 clean:
 	rm -f nuclearControl missileSilo submarine radar satellite
