--- a/UK_Nuclear_Simulator/Makefile
+++ b/UK_Nuclear_Simulator/Makefile
@@ -4,31 +4,23 @@ LDFLAGS = -lssl -lcrypto -lpthread
 
 all: nuclearControl missileSilo submarine radar satellite
 
-nuclearControl: nuclearControl.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ nuclearControl.c common.c $(LDFLAGS)
+nuclearControl: nuclearControl.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-missileSilo: missileSilo.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ missileSilo.c common.c $(LDFLAGS)
+missileSilo: missileSilo.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-submarine: submarine.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ submarine.c common.c $(LDFLAGS)
+submarine: submarine.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-radar: radar.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ radar.c common.c $(LDFLAGS)
+radar: radar.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-satellite: satellite.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ satellite.c common.c $(LDFLAGS)
+satellite: satellite.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 clean:
-	rm -f nuclearControl missileSilo submarine radar satellite
-	rm -f nuclear_log.txt targets.dat
+	rm -f nuclearControl missileSilo submarine radar satellite nuclear_log.txt
 
-test: all
-	./nuclearControl --test &
-	./missileSilo &
-	./submarine &
-	./radar &
-	./satellite &
-
-.PHONY: all clean test
+.PHONY: all clean
 
