--- a/UK_Nuclear_Simulator/Makefile
+++ b/UK_Nuclear_Simulator/Makefile
@@ -4,23 +4,31 @@ LDFLAGS = -lssl -lcrypto -lpthread
 
 all: nuclearControl missileSilo submarine radar satellite
 
-nuclearControl: nuclearControl.c common.c
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+nuclearControl: nuclearControl.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
 
-missileSilo: missileSilo.c common.c
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+missileSilo: missileSilo.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
 
-submarine: submarine.c common.c
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+submarine: submarine.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
 
-radar: radar.c common.c
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+radar: radar.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
 
-satellite: satellite.c common.c
-	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+satellite: satellite.c common.c common.h
+	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
 
 clean:
-	rm -f nuclearControl missileSilo submarine radar satellite nuclear_log.txt
+	rm -f nuclearControl missileSilo submarine radar satellite
+	rm -f nuclear_log.txt targets.dat
 
-.PHONY: all clean
+test: all
+	./nuclearControl --test &
+	./missileSilo &
+	./submarine &
+	./radar &
+	./satellite &
+
+.PHONY: all clean test
 
