--- a/UK_Nuclear_Simulator/Makefile
+++ b/UK_Nuclear_Simulator/Makefile
@@ -1,34 +1,27 @@
 CC = gcc
-CFLAGS = -Wall -Wextra -O2 -I.
-LDFLAGS = -lssl -lcrypto -lpthread
+CFLAGS = -Wall -Wextra -O2 -I. $(shell pkg-config --cflags openssl)
+LDFLAGS = $(shell pkg-config --libs openssl) -lpthread
 
-all: nuclearControl missileSilo submarine radar satellite
+TARGETS = control_center missile_silo radar_station satellite submarine
 
-nuclearControl: nuclearControl.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+all: $(TARGETS)
 
-missileSilo: missileSilo.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+nuclearControl: nuclearControl.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-submarine: submarine.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+missileSilo: missileSilo.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-radar: radar.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+radar: radar.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
-satellite: satellite.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+satellite: satellite.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+submarine: submarine.c common.c
+	$(CC) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 clean:
-	rm -f nuclearControl missileSilo submarine radar satellite
-	rm -f nuclear_log.txt targets.dat
+	rm -f $(TARGETS) nuclear_log.txt
 
-test: all
-	./nuclearControl --test &
-	./missileSilo &
-	./submarine &
-	./radar &
-	./satellite &
-
-.PHONY: all clean test
-
+.PHONY: all clean
