--- a/UK_Nuclear_Simulator/Makefile
+++ b/UK_Nuclear_Simulator/Makefile
@@ -5,23 +5,22 @@ LDFLAGS = -lssl -lcrypto -lpthread
 all: nuclearControl missileSilo submarine radar satellite
 
 nuclearControl: nuclearControl.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ nuclearControl.c common.c $(LDFLAGS)
 
 missileSilo: missileSilo.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ missileSilo.c common.c $(LDFLAGS)
 
 submarine: submarine.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ submarine.c common.c $(LDFLAGS)
 
 radar: radar.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ radar.c common.c $(LDFLAGS)
 
 satellite: satellite.c common.c common.h
-	$(CC) $(CFLAGS) -o $@ $< common.c $(LDFLAGS)
+	$(CC) $(CFLAGS) -o $@ satellite.c common.c $(LDFLAGS)
 
 clean:
-	rm -f nuclearControl missileSilo submarine radar satellite
-	rm -f nuclear_log.txt targets.dat
+	rm -f nuclearControl missileSilo submarine radar satellite nuclear_log.txt targets.dat
 
 test: all
 	./nuclearControl --test &
